--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,32 @@
 {
-    "strict": true,
-    "allowSyntheticDefaultImports": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "jsx": "react",
-    "target": "esnext",
-    "include": [
-        "./src/*"
+  "strict": true,
+  "allowSyntheticDefaultImports": true,
+  "emitDecoratorMetadata": true,
+  "esModuleInterop": true,
+  "jsx": "react",
+  "target": "esnext",
+  "include": [
+    "./src/*"
+  ],
+  "compilerOptions": {
+    "lib": [
+      "dom",
+      "es2015",
+      "es2016",
+      "es2017"
     ],
-    "compilerOptions": {
-        "lib": [
-            "dom",
-            "es2015",
-            "es2016",
-            "es2017"
-        ],
-        "jsx": "react"
-    }
+    "jsx": "react",
+    "target": "es5",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true
+  }
 }
